--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "touchboard-apps-electron",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/main/index.cjs",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "author": "Thomas Nixon <thomas.nixon@gray.tv>",
   "license": "MIT",
   "scripts": {
     "dev": "node scripts/watch.mjs",
