attempting to update es build to working version

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "electron-updater": "^5.0.1",
+    "esbuild": "^0.14.39",
     "interactjs": "^1.10.11",
     "pinia": "^2.0.14",
     "vue-router": "^4.0.15"
