--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "touchboard-apps-electron",
-  "version": "1.0.7",
+  "version": "1.2.0",
   "main": "dist/main/index.cjs",
   "author": "Thomas Nixon <thomas.nixon@gray.tv>",
   "license": "MIT",
@@ -45,7 +45,6 @@
   ],
   "dependencies": {
     "axios": "^0.27.2",
-    "electron-updater": "^5.0.1",
     "esbuild": "^0.14.39",
     "interactjs": "^1.10.11",
     "pinia": "^2.0.14",
@@ -54,6 +53,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thomasNGrayTv/touchboard-apps-electron"
-}
+    "url": "https://github.com/thomasNGrayTv/touchboard-apps-electron.git"
+  }
 }
