--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "touchboard-apps-electron",
-  "version": "1.3.1",
+  "version": "1.3.3",
   "main": "dist/main/index.cjs",
   "author": "Thomas Nixon <thomas.nixon@gray.tv>",
   "license": "MIT",
@@ -45,6 +45,7 @@
   ],
   "dependencies": {
     "axios": "^0.27.2",
+    "electron-updater": "^5.0.1",
     "esbuild": "^0.14.39",
     "interactjs": "^1.10.11",
     "pinia": "^2.0.14",
