--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   ],
   "dependencies": {
     "axios": "^0.27.2",
+    "electron-log": "^4.4.7",
     "electron-updater": "^5.0.1",
     "esbuild": "^0.14.39",
     "interactjs": "^1.10.11",
