--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -38,4 +38,8 @@
     allowToChangeInstallationDirectory: true,
     deleteAppDataOnUninstall: false,
   },
+  publish: {
+    provider: "github",
+    owner: "thomasNGrayTv",
+  },
 }
