--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "electron-log": "^4.4.7",
     "electron-updater": "^5.0.1",
     "esbuild": "^0.14.39",
+    "fabric": "^5.2.1",
     "interactjs": "^1.10.11",
     "pinia": "^2.0.14",
     "screenshot-desktop": "^1.12.7",
