--- a/packages/renderer/src/backups/apps.json
+++ b/packages/renderer/src/backups/apps.json
@@ -1,6 +1,11 @@
 {
   "data": [
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "Fact Finder",
       "link": "fact-finder",
       "favorite": true,
@@ -11,6 +16,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "gPoll",
       "link": "g-poll",
       "favorite": true,
@@ -21,6 +31,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "Whiteboard",
       "link": "whiteboard",
       "favorite": false,
@@ -31,6 +46,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "Fact Finder",
       "link": "fact-finder",
       "favorite": false,
@@ -41,6 +61,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "gPoll",
       "link": "g-poll",
       "favorite": false,
@@ -51,6 +76,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "Whiteboard",
       "link": "whiteboard",
       "favorite": false,
@@ -61,6 +91,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "Fact Finder",
       "link": "fact-finder",
       "favorite": false,
@@ -71,6 +106,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "gPoll",
       "link": "g-poll",
       "favorite": false,
@@ -81,6 +121,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "Whiteboard",
       "link": "whiteboard",
       "favorite": false,
@@ -91,6 +136,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "Fact Finder",
       "link": "fact-finder",
       "favorite": false,
@@ -101,6 +151,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "gPoll",
       "link": "g-poll",
       "favorite": false,
@@ -111,6 +166,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "Whiteboard",
       "link": "whiteboard",
       "favorite": false,
@@ -121,6 +181,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "Fact Finder",
       "link": "fact-finder",
       "favorite": false,
@@ -131,6 +196,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "gPoll",
       "link": "g-poll",
       "favorite": false,
@@ -141,6 +211,11 @@
       }
     },
     {
+      "prelaunchConfig": {
+        "sideBarControls": [],
+        "options": [],
+        "themes": []
+      },
       "name": "Whiteboard",
       "link": "whiteboard",
       "favorite": false,
