--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -10,8 +10,7 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
-    "types": ["vue-cesium/global", "vue-cesium/Cesium"]
+    "lib": ["esnext", "dom"]
   },
   "include": [
     "src/**/*.ts",
